--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<!--<app-interpolation></app-interpolation>-->
-<app-modcom></app-modcom>
+<!--<app-interpolation></app-interpolation>
+<app-modcom></app-modcom>-->
+<app-click-function></app-click-function>
