--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!--<app-interpolation></app-interpolation>
-<app-modcom></app-modcom>-->
-<app-click-function></app-click-function>
+<app-modcom></app-modcom>
+<app-click-function></app-click-function>-->
+<app-events></app-events>
