--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!--<app-interpolation></app-interpolation>
 <app-modcom></app-modcom>
-<app-click-function></app-click-function>-->
-<app-events></app-events>
+<app-click-function></app-click-function>
+<app-events></app-events>-->
+<app-get-input-value></app-get-input-value>
