--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!--<app-interpolation></app-interpolation>
 <app-modcom></app-modcom>
 <app-click-function></app-click-function>
-<app-events></app-events>-->
-<app-get-input-value></app-get-input-value>
+<app-events></app-events>
+<app-get-input-value></app-get-input-value>-->
+<app-property-bind></app-property-bind>
