--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
 <app-modcom></app-modcom>
 <app-click-function></app-click-function>
 <app-events></app-events>
-<app-get-input-value></app-get-input-value>-->
-<app-property-bind></app-property-bind>
+<app-get-input-value></app-get-input-value>
+<app-property-bind></app-property-bind>-->
+<app-conditional-statement></app-conditional-statement>
