--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,6 @@
 <app-click-function></app-click-function>
 <app-events></app-events>
 <app-get-input-value></app-get-input-value>
-<app-property-bind></app-property-bind>-->
-<app-conditional-statement></app-conditional-statement>
+<app-property-bind></app-property-bind>
+<app-conditional-statement></app-conditional-statement>-->
+<app-switch-case></app-switch-case>
