--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,6 @@
 <app-get-input-value></app-get-input-value>
 <app-property-bind></app-property-bind>
 <app-conditional-statement></app-conditional-statement>
-<app-switch-case></app-switch-case>-->
-<app-for-loop></app-for-loop>
+<app-switch-case></app-switch-case>
+<app-for-loop></app-for-loop>-->
+<app-simple-form></app-simple-form>
