--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,5 +6,6 @@
 <app-property-bind></app-property-bind>
 <app-conditional-statement></app-conditional-statement>
 <app-switch-case></app-switch-case>
-<app-for-loop></app-for-loop>-->
-<app-simple-form></app-simple-form>
+<app-for-loop></app-for-loop>
+<app-simple-form></app-simple-form>-->
+<app-style-binding></app-style-binding>
