parent to child data transfer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,5 +7,6 @@
 <app-conditional-statement></app-conditional-statement>
 <app-switch-case></app-switch-case>
 <app-for-loop></app-for-loop>
-<app-simple-form></app-simple-form>-->
-<app-style-binding></app-style-binding>
+<app-simple-form></app-simple-form>
+<app-style-binding></app-style-binding>-->
+<app-parent></app-parent>
