child to parent data transfer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,5 +8,6 @@
 <app-switch-case></app-switch-case>
 <app-for-loop></app-for-loop>
 <app-simple-form></app-simple-form>
-<app-style-binding></app-style-binding>-->
-<app-parent></app-parent>
+<app-style-binding></app-style-binding>
+<app-parent></app-parent>-->
+<app-parent-two></app-parent-two>
