--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,5 +9,6 @@
 <app-for-loop></app-for-loop>
 <app-simple-form></app-simple-form>
 <app-style-binding></app-style-binding>
-<app-parent></app-parent>-->
-<app-parent-two></app-parent-two>
+<app-parent></app-parent>
+<app-parent-two></app-parent-two>-->
+<app-pipes></app-pipes>
