--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,5 +10,13 @@
 <app-simple-form></app-simple-form>
 <app-style-binding></app-style-binding>
 <app-parent></app-parent>
-<app-parent-two></app-parent-two>-->
-<app-pipes></app-pipes>
+<app-parent-two></app-parent-two>
+<app-pipes></app-pipes>-->
+
+<button routerLink=routerone>Router One!</button>
+<br><br>
+<button routerLink=routertwo>Router Two!</button>
+<br><br>
+<button routerLink=routerthree>Router Three!</button>
+<br><br>
+<router-outlet></router-outlet>
