--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,10 +13,12 @@
 <app-parent-two></app-parent-two>
 <app-pipes></app-pipes>-->
 
-<button routerLink=routerone>Router One!</button>
+<!--<button routerLink=routerone>Router One!</button>
 <br><br>
 <button routerLink=routertwo>Router Two!</button>
 <br><br>
 <button routerLink=routerthree>Router Three!</button>
 <br><br>
-<router-outlet></router-outlet>
+<router-outlet></router-outlet>-->
+
+<!--<h3 appCustomDirective>Custom Directive Heading!</h3>-->
