models and interfaces

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,4 +23,6 @@
 
 <!--<h3 appCustomDirective>Custom Directive Heading!</h3>-->
 
-<app-pipes></app-pipes>
+<!--<app-pipes></app-pipes>-->
+
+<app-models-interfaces></app-models-interfaces>
