--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,4 +25,4 @@
 
 <!--<app-pipes></app-pipes>-->
 
-<app-models-interfaces></app-models-interfaces>
+<!--<app-models-interfaces></app-models-interfaces>-->
