--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,3 +26,9 @@
 <!--<app-pipes></app-pipes>-->
 
 <!--<app-models-interfaces></app-models-interfaces>-->
+
+<!--<button routerLink=one>One!</button>
+<br><br>
+<button routerLink=two>Two!</button>
+<br><br>
+<router-outlet></router-outlet>-->
