module with its standalone routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,3 +32,9 @@
 <button routerLink=two>Two!</button>
 <br><br>
 <router-outlet></router-outlet>-->
+
+<button routerLink=onecomponent>One Component!</button>
+<br><br>
+<button routerLink=twocomponent>Two Component!</button>
+<br><br>
+<router-outlet></router-outlet>
