--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,8 +33,18 @@
 <br><br>
 <router-outlet></router-outlet>-->
 
-<button routerLink=onecomponent>One Component!</button>
+<!--<button routerLink=onecomponent>One Component!</button>
 <br><br>
 <button routerLink=twocomponent>Two Component!</button>
+<br><br>
+<router-outlet></router-outlet>-->
+
+<button routerLink="oneadmin/customer">Customer!</button>
+<br><br>
+<button routerLink="oneadmin/cleaner">Cleaner!</button>
+<br><br><hr><br>
+<button routerLink="twoadmin/customer">Customer!</button>
+<br><br>
+<button routerLink="twoadmin/cleaner">Cleaner!</button>
 <br><br>
 <router-outlet></router-outlet>
