--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,12 +39,18 @@
 <br><br>
 <router-outlet></router-outlet>-->
 
-<button routerLink="oneadmin/customer">Customer!</button>
+<!--<button routerLink="oneadmin/customer">Customer!</button>
 <br><br>
 <button routerLink="oneadmin/cleaner">Cleaner!</button>
 <br><br><hr><br>
 <button routerLink="twoadmin/customer">Customer!</button>
 <br><br>
 <button routerLink="twoadmin/cleaner">Cleaner!</button>
+<br><br>
+<router-outlet></router-outlet>-->
+
+<button routerLink="lazy/myone">Customer!</button>
+<br><br>
+<button routerLink="lazy/mytwo">Cleaner!</button>
 <br><br>
 <router-outlet></router-outlet>
