--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,8 +49,14 @@
 <br><br>
 <router-outlet></router-outlet>-->
 
-<button routerLink="lazy/myone">Customer!</button>
+<!--<button routerLink="lazy/myone">Customer!</button>
 <br><br>
 <button routerLink="lazy/mytwo">Cleaner!</button>
 <br><br>
-<router-outlet></router-outlet>
+<router-outlet></router-outlet>-->
+
+<!--
+    call API HTTP
+    show list from API Data
+    Lazy Loading component
+-->
